[metadata]
name = {{PACKAGE_NAME_PLACEHOLDER}}
description = A bot framework to automate Lemmy moderation tasks
long_description_content_type = text/markdown
url = https://github.com/EmilyMclean/LemmyModBot
project_urls =
    Bug Tracker = https://github.com/EmilyMclean/LemmyModBot/issues
    Changelog = https://github.com/EmilyMclean/LemmyModBot/releases

[options]
package_dir =
    = lemmymodbot
packages = find:
python_requires = >=3.6

[options.packages.find]
where=lemmymodbot